# EpreuveGlobaleCTO

./: README.md  requirements.txt
back/: config.json  data.json  main.py  models.py  pyproject.toml  sendmail.py
front/: package-lock.json
front/src/routes/test/: +page.svelte
